--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "pl400 practice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "author": "Alpha Lagatt",
   "license": "ISC",
